--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "mdbreact": "4.27.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0",
-    "react-router-dom": "^5.1.2"
+    "react-image-lightbox": "^5.1.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
